force-app/main/default/objects/Opportunity/fields/Advance_Payment__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Advance Payment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>