force-app/main/default/objects/Opportunity/fields/Advance_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advance Payment Received ?</label>
    <type>Checkbox</type>
</CustomField>