force-app/main/default/objects/Opportunity/fields/AVA_SFCLOUD__Calculate_Tax__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Calculate_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers AvaTax to show the calculated tax.</description>
    <inlineHelpText>Triggers AvaTax to show the calculated tax.</inlineHelpText>
    <label>Calculate Tax</label>
    <type>Checkbox</type>
</CustomField>