force-app/main/default/objects/Opportunity/fields/AVA_SFCLOUD__Origin_Country__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Origin_Country__c</fullName>
    <description>Enter the country of your opportunity.</description>
    <inlineHelpText>Enter the country of your opportunity.</inlineHelpText>
    <label>Origin Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>