force-app/main/default/objects/Opportunity/fields/AVA_SFCLOUD__Origin_State__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Origin_State__c</fullName>
    <description>Enter the state/province of your opportunity.</description>
    <inlineHelpText>Enter the state/province of your opportunity.</inlineHelpText>
    <label>Origin State/Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>