force-app/main/default/objects/Opportunity/fields/AVA_SFCLOUD__Origin_Street__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Origin_Street__c</fullName>
    <description>Enter the street of your opportunity.</description>
    <inlineHelpText>Enter the street of your opportunity.</inlineHelpText>
    <label>Origin Street</label>
    <length>150</length>
    <type>Text</type>
</CustomField>