force-app/main/default/objects/Opportunity/fields/AVA_SFCLOUD__Tax_Date__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Tax_Date__c</fullName>
    <description>This field determines the tax calculation date for the Opportunities. If left blank, will be the same as the Opportunity Date.</description>
    <inlineHelpText>This field determines the tax calculation date for the Opportunities. If left blank, will be the same as the Opportunity Date.</inlineHelpText>
    <label>Tax Date</label>
    <type>DateTime</type>
</CustomField>