force-app/main/default/objects/Opportunity/fields/AVA_SFCLOUD__Transport__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Transport__c</fullName>
    <inlineHelpText>This specifies who is responsible for transport of the goods on the transaction</inlineHelpText>
    <label>Transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVA_SFCLOUD__Avalara_Transport</valueSetName>
    </valueSet>
</CustomField>