force-app/main/default/objects/Opportunity/fields/Cannot_be_fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Cannot_be_fulfilled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cannot be fulfilled</label>
    <type>Checkbox</type>
</CustomField>