force-app/main/default/objects/Opportunity/fields/Comment_from_the_Customer__c.field-meta.xml
<CustomField>
    <fullName>Comment_from_the_Customer__c</fullName>
    <description>Comment that the customer is aware that the Order cannot be Cancelled, Refunded, or Returned.</description>
    <label>Comment from the Customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>