force-app/main/default/objects/Opportunity/fields/Customer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Number__c</fullName>
    <formula>Account.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account Number</label>
    <type>Text</type>
</CustomField>