force-app/main/default/objects/Opportunity/fields/Customer_Decision__c.field-meta.xml
<CustomField>
    <fullName>Customer_Decision__c</fullName>
    <label>Customer Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>