force-app/main/default/objects/Opportunity/fields/Customer_Decision_From_Quote__c.field-meta.xml
<CustomField>
    <fullName>Customer_Decision_From_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Decision From Quote</label>
    <type>Checkbox</type>
</CustomField>