force-app/main/default/objects/Opportunity/fields/Customer_Status1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status1__c</fullName>
    <formula>IF(ISPICKVAL(Account.Customer_Status__c, &apos;New&apos;) ,&apos;New&apos; , 
if(ISPICKVAL(Account.Customer_Status__c, &apos;Existing Customer&apos;),&apos;Existing Customer&apos; , &apos;&apos; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Status</label>
    <type>Text</type>
</CustomField>