force-app/main/default/objects/Opportunity/fields/Customers_Name__c.field-meta.xml
<CustomField>
    <fullName>Customers_Name__c</fullName>
    <formula>IF( Account.IsPersonAccount == true , Account.FirstName &amp;&quot; &quot;&amp;  Account.MiddleName  &amp;&quot; &quot;&amp;Account.LastName,  Account.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer’s Name</label>
    <type>Text</type>
</CustomField>