force-app/main/default/objects/Opportunity/fields/Customers_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Customers_Phone_Number__c</fullName>
    <formula>Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer’s Phone Number</label>
    <type>Text</type>
</CustomField>