force-app/main/default/objects/Opportunity/fields/Discount_Level__c.field-meta.xml
<CustomField>
    <fullName>Discount_Level__c</fullName>
    <label>Discount Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>