force-app/main/default/objects/Opportunity/fields/GSK__c.field-meta.xml
<CustomField>
    <fullName>GSK__c</fullName>
    <formula>IF( GSK_Customer__c ,  Account.GSK__c ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSK</label>
    <type>Text</type>
</CustomField>