force-app/main/default/objects/Opportunity/fields/GSK_Customer__c.field-meta.xml
<CustomField>
    <fullName>GSK_Customer__c</fullName>
    <formula>Account.GSK_Customers__c</formula>
    <label>GSK Customer</label>
    <type>Checkbox</type>
</CustomField>