force-app/main/default/objects/Opportunity/fields/GSK_Product_Available__c.field-meta.xml
<CustomField>
    <fullName>GSK_Product_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GSK Product Available</label>
    <type>Checkbox</type>
</CustomField>