force-app/main/default/objects/Opportunity/fields/HasShippingProduct__c.field-meta.xml
<CustomField>
    <fullName>HasShippingProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasShippingProduct</label>
    <type>Checkbox</type>
</CustomField>