force-app/main/default/objects/Opportunity/fields/Inventory_Confirmation_Task_Completed__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Confirmation_Task_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inventory Confirmation Task Completed</label>
    <type>Checkbox</type>
</CustomField>