force-app/main/default/objects/Opportunity/fields/Is_Regular__c.field-meta.xml
<CustomField>
    <fullName>Is_Regular__c</fullName>
    <formula>IF( AND( Account.Perf365Days__c &gt;= 2000,Account.Perf365Days__c&lt; 3000) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Regular</label>
    <type>Checkbox</type>
</CustomField>