force-app/main/default/objects/Opportunity/fields/Lock_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lock_Stage__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lock Stage</label>
    <type>Checkbox</type>
</CustomField>