force-app/main/default/objects/Opportunity/fields/Needs_Review_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Needs_Review_of_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Review of Customer</label>
    <type>Checkbox</type>
</CustomField>