force-app/main/default/objects/Opportunity/fields/Platinum_customer1__c.field-meta.xml
<CustomField>
    <fullName>Platinum_customer1__c</fullName>
    <formula>IF(ISPICKVAL(Account.Discount_Level__c , &apos;3 Star&apos;) || ISPICKVAL(Account.Discount_Level__c ,&apos;4 Star&apos;) || ISPICKVAL(Account.Discount_Level__c ,&apos;5 Star&apos;), true,false)</formula>
    <label>Platinum customer</label>
    <type>Checkbox</type>
</CustomField>