force-app/main/default/objects/Opportunity/fields/Platinum_Star_Level__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Star_Level__c</fullName>
    <formula>Text(Account.Discount_Level__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platinum Star Level</label>
    <type>Text</type>
</CustomField>