force-app/main/default/objects/Opportunity/fields/PM_Place_Order_Task_Completed__c.field-meta.xml
<CustomField>
    <fullName>PM_Place_Order_Task_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PM Place Order Task Completed</label>
    <type>Checkbox</type>
</CustomField>