force-app/main/default/objects/Opportunity/fields/POETA_Date__c.field-meta.xml
<CustomField>
    <fullName>POETA_Date__c</fullName>
    <label>PO ETA Date</label>
    <type>Date</type>
</CustomField>