force-app/main/default/objects/Opportunity/fields/Replace_Temporary_Product_with_Original__c.field-meta.xml
<CustomField>
    <fullName>Replace_Temporary_Product_with_Original__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replace Temporary Product with Original</label>
    <type>Checkbox</type>
</CustomField>