force-app/main/default/objects/Opportunity/fields/Reviewed_By_Both_Pricing_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By_Both_Pricing_Product_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed By Both Platinum,CS Group</label>
    <type>Checkbox</type>
</CustomField>