force-app/main/default/objects/Opportunity/fields/rstk__rs_socontract__c.field-meta.xml
<CustomField>
    <fullName>rstk__rs_socontract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract ID</label>
    <referenceTo>rstk__socontract__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>