force-app/main/default/objects/Opportunity/fields/Shipping_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Customer_Address__c.ParentId__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Customer_Address__c</referenceTo>
    <relationshipLabel>Customer Opportunity Shipping Addresses</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>