force-app/main/default/objects/Opportunity/fields/Special_Order_Product_Added__c.field-meta.xml
<CustomField>
    <fullName>Special_Order_Product_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Order Product Added</label>
    <type>Checkbox</type>
</CustomField>