force-app/main/default/objects/Opportunity/fields/Special_Price_Order__c.field-meta.xml
<CustomField>
    <fullName>Special_Price_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Price Order</label>
    <type>Checkbox</type>
</CustomField>