force-app/main/default/objects/Opportunity/fields/Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Submitted_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>