force-app/main/default/objects/Opportunity/fields/Total_No_of_Products_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Products_Available__c</fullName>
    <label>Total No. of Products Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>