force-app/main/default/objects/Opportunity/fields/Total_Products_While_Deleting_Temporary__c.field-meta.xml
<CustomField>
    <fullName>Total_Products_While_Deleting_Temporary__c</fullName>
    <label>Total Products While Deleting Temporary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>