force-app/main/default/objects/Opportunity/fields/X365_Days__c.field-meta.xml
<CustomField>
    <fullName>X365_Days__c</fullName>
    <formula>Account.Perf365Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>365 Days $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>