force-app/main/default/objects/Opportunity/validationRules/Address_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_cannot_be_empty</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( StageName,&apos;Vendor Confirmation&apos;),
OR(
ISBLANK( Billing_Address__City__s ), 
ISBLANK(  TEXT(Billing_Address__CountryCode__s) ), 
ISBLANK(  TEXT(Billing_Address__StateCode__s )), 
ISBLANK(  Billing_Address__Street__s ), 
ISBLANK(  Billing_Address__PostalCode__s ),
ISBLANK(  Shipping_Address__City__s ), 
ISBLANK(  TEXT( Shipping_Address__CountryCode__s ) ), 
ISBLANK(  TEXT( Shipping_Address__StateCode__s )), 
ISBLANK(   Shipping_Address__Street__s ), 
ISBLANK(   Shipping_Address__PostalCode__s )
)
)</errorConditionFormula>
    <errorMessage>Address cannot be empty.</errorMessage>
</ValidationRule>