force-app/main/default/objects/Opportunity/validationRules/Approval_not_applicable.validationRule-meta.xml
<ValidationRule>
    <fullName>Approval_not_applicable</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(StageName,&quot;Approval&quot;),
Special_Price_Order__c == False,
OR(
AND(
ISPICKVAL(PRIORVALUE(StageName),&quot;New&quot;),
HasOpportunityLineItem
), 
ISPICKVAL(PRIORVALUE(StageName),&quot;Vendor Confirmation&quot;),
ISPICKVAL(PRIORVALUE(StageName),&quot;In Review&quot;)
)
)</errorConditionFormula>
    <errorMessage>Approval is valid only for Order with Special Price Request.</errorMessage>
</ValidationRule>