force-app/main/default/objects/Opportunity/validationRules/Business_Account_Cant_be_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Account_Cant_be_Selected</fullName>
    <active>true</active>
    <errorConditionFormula>Account.IsPersonAccount == false</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Please Select Person Account For Special Order</errorMessage>
</ValidationRule>