force-app/main/default/objects/Opportunity/validationRules/Cannot_Commit_Order_Without_Inventory.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Commit_Order_Without_Inventory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Is_Inventory_Available__c == FALSE, 
ISPICKVAL(PRIORVALUE(StageName),&quot;Awaiting for Inventory&quot;),
ISPICKVAL( StageName , &quot;Commit Order&quot; ))</errorConditionFormula>
    <errorMessage>Inventory should be available before Committing the Order.</errorMessage>
</ValidationRule>