force-app/main/default/objects/Opportunity/validationRules/Cannot_Move_to_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Move_to_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(StageName,&quot;Approval&quot;),
Special_Price_Order__c = True, 
OR(
AND(
ISPICKVAL(PRIORVALUE(StageName),&quot;New&quot;),
HasOpportunityLineItem
), 
ISPICKVAL(PRIORVALUE(StageName),&quot;Vendor Confirmation&quot;)
)
)</errorConditionFormula>
    <errorMessage>You cannot directly move for &quot;Approval&quot;, Please follow the process.</errorMessage>
</ValidationRule>